--- a/nb/WebScrapping_bs4.ipynb
+++ b/nb/WebScrapping_bs4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "cf7c7709-672c-4d27-ae0e-f9cced5397f7",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "b56ce0d2-dfaf-4322-9e1e-ac845eaf652e",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
     "    \n",
     "def get_category(soup):\n",
     "    try:\n",
-    "        category = soup.find(\"title\").text.split(\":\")[1].strip()\n",
+    "        category = soup.find(\"title\").text.split(\":\")[1].strip().replace(\"Best \",\"\")[:30]\n",
     "        return category\n",
     "    except:\n",
     "        return \"\"\n"
@@ -155,7 +155,7 @@
     "HEADERS = ({'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/17.0 Safari/605.1.15', 'Accept-Language' : 'en-CA,en-US;q=0.9,en;q=0.8' })\n",
     "writer = pd.ExcelWriter(\"Ranks.xlsx\")\n",
     "\n",
-    "for i in range(1,11):\n",
+    "for i in range(11,101):\n",
     "    \n",
     "    ranking_df = pd.DataFrame()\n",
     "    url = f\"https://www.amazon.com/gp/bestsellers/books/{str(i)}/ref=pd_zg_hrsr_books\"\n",
@@ -169,7 +169,7 @@
     "        books = soup.find_all(\"div\", attrs = {'a-column a-span12 a-text-center _cDEzb_grid-column_2hIsc'})\n",
     "        \n",
     "        print(f\"Processing page {i} - Category {category} with {len(books)} books\")\n",
-    "        logger(f\"Processing page {i} - Category {category} with {len(books)} books\", logfile=\"success.txt\")\n",
+    "        logger(f\"Processing page {i} - Category {category} with {len(books)} books\", logfile=\"log.txt\")\n",
     "        \n",
     "        for book in books:\n",
     "            book_values = {\n",
@@ -184,14 +184,26 @@
     "            }\n",
     "\n",
     "            ranking_df = pd.concat([ranking_df, pd.DataFrame.from_dict([book_values])], ignore_index=True)\n",
-    "        ranking_df.to_excel(writer, sheet_name=category, index=False, )\n",
+    "        ranking_df.to_excel(writer, sheet_name=category[:30], index=False, )\n",
     "    else:\n",
-    "        \n",
     "        print(f\"PAGE {i} - {url} \\t\\t ----------------ERROR\")\n",
-    "        logger(f\"PAGE {i} - {url} \\t\\t ----------------ERROR\", logfile=\"error_detailed.txt\")\n",
+    "        logger(f\"PAGE {i} - {url} \\t\\t ----------------ERROR\", logfile=\"log.txt\")\n",
     "        logger(f'{i}, ', logfile = \"error_list.txt\")\n",
     "    time.sleep(15)\n",
     "writer.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83d1617e-a1d2-4688-b0bd-a4294d92fdbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # things to add\n",
+    "# - if books come up as zero, add them to error list\n",
+    "# - read old csv\n",
+    "# - add books to sme df and write back"
    ]
   }
  ],
