--- a/nb/WebScrapping_bs4.ipynb
+++ b/nb/WebScrapping_bs4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cf7c7709-672c-4d27-ae0e-f9cced5397f7",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,30 @@
     "import requests\n",
     "import pandas as pd\n",
     "import time\n",
-    "from logger import logger"
+    "from logger import logger\n",
+    "import shutil, os, re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "01927821-6262-4b72-ab23-c30c95b3076e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_results_dir = '../files/csv/'\n",
+    "\n",
+    "\n",
+    "scrap_old_flag = 0\n",
+    "\n",
+    "if scrap_old_flag==1:\n",
+    "    shutil.rmtree(csv_results_dir, ignore_errors=True)\n",
+    "    os.mkdir(csv_results_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c521fa63-d38d-483e-8966-4987caf1f256",
    "metadata": {},
    "outputs": [],
@@ -27,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5a377004-5a95-4196-a444-43535c58aefa",
    "metadata": {},
    "outputs": [],
@@ -38,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cefd4356-f4fa-4a7a-acd4-45ba397dceba",
    "metadata": {},
    "outputs": [],
@@ -48,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "58a3f023-bcd8-474a-b92b-56d004101ab1",
    "metadata": {},
    "outputs": [],
@@ -59,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "daff41bd-cc4c-4ae2-8ce8-266b61203aed",
    "metadata": {},
    "outputs": [],
@@ -81,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b56ce0d2-dfaf-4322-9e1e-ac845eaf652e",
    "metadata": {},
    "outputs": [],
@@ -147,15 +165,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "3ead959b-89ac-4b7e-83ee-9dc9cb34e663",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing page 8 - Category undefined with 0 books\n",
+      "\n",
+      "Processing page 11 - Category undefined with 0 books\n",
+      "\n",
+      "PAGE 12 - https://www.amazon.com/gp/bestsellers/books/12/ref=pd_zg_hrsr_books \t\t ----------------ERROR - reading page\n",
+      "PAGE 13 - https://www.amazon.com/gp/bestsellers/books/13/ref=pd_zg_hrsr_books \t\t ----------------ERROR - reading page\n",
+      "Processing page 14 - Category undefined with 0 books\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "HEADERS = ({'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/17.0 Safari/605.1.15', 'Accept-Language' : 'en-CA,en-US;q=0.9,en;q=0.8' })\n",
-    "writer = pd.ExcelWriter(\"Ranks.xlsx\")\n",
+    "# writer = pd.ExcelWriter(\"Ranks.xlsx\")\n",
     "\n",
-    "for i in range(11,101):\n",
+    "for i in [8, 11, 12, 13, 14]:\n",
     "    \n",
     "    ranking_df = pd.DataFrame()\n",
     "    url = f\"https://www.amazon.com/gp/bestsellers/books/{str(i)}/ref=pd_zg_hrsr_books\"\n",
@@ -171,40 +204,40 @@
     "        print(f\"Processing page {i} - Category {category} with {len(books)} books\")\n",
     "        logger(f\"Processing page {i} - Category {category} with {len(books)} books\", logfile=\"log.txt\")\n",
     "        \n",
-    "        for book in books:\n",
-    "            book_values = {\n",
-    "                \"category\": category,\n",
-    "                \"rank\" : get_rank(book),\n",
-    "                \"asin\" : get_asin(book),\n",
-    "                \"name\": get_name(book),\n",
-    "                \"author\" : get_author(book),\n",
-    "                \"type_case\" :get_type_case(book),\n",
-    "                \"price\" : get_price(book),\n",
-    "                \"link\" : get_link(book)\n",
-    "            }\n",
+    "        if len(books)>0:\n",
+    "            for book in books:\n",
+    "                book_values = {\n",
+    "                    \"category\": category,\n",
+    "                    \"rank\" : get_rank(book),\n",
+    "                    \"asin\" : get_asin(book),\n",
+    "                    \"name\": get_name(book),\n",
+    "                    \"author\" : get_author(book),\n",
+    "                    \"type_case\" :get_type_case(book),\n",
+    "                    \"price\" : get_price(book),\n",
+    "                    \"link\" : get_link(book)\n",
+    "                }\n",
     "\n",
-    "            ranking_df = pd.concat([ranking_df, pd.DataFrame.from_dict([book_values])], ignore_index=True)\n",
-    "        ranking_df.to_excel(writer, sheet_name=category[:30], index=False, )\n",
+    "                ranking_df = pd.concat([ranking_df, pd.DataFrame.from_dict([book_values])], ignore_index=True)\n",
+    "            ranking_df.to_csv(csv_results_dir+f\"{i} - {category}.csv\", index=False)\n",
+    "        else:\n",
+    "            print(\"\")\n",
+    "            logger(f\"PAGE {i} - {url} \\t\\t ----------------ERROR - NO BOOKS found\", logfile=\"log.txt\")\n",
+    "            logger(f'{i}, ', logfile = \"error_list.txt\")\n",
     "    else:\n",
-    "        print(f\"PAGE {i} - {url} \\t\\t ----------------ERROR\")\n",
-    "        logger(f\"PAGE {i} - {url} \\t\\t ----------------ERROR\", logfile=\"log.txt\")\n",
+    "        print(f\"PAGE {i} - {url} \\t\\t ----------------ERROR - reading page\")\n",
+    "        logger(f\"PAGE {i} - {url} \\t\\t ----------------ERROR - reading page\", logfile=\"log.txt\")\n",
     "        logger(f'{i}, ', logfile = \"error_list.txt\")\n",
-    "    time.sleep(15)\n",
-    "writer.close()"
+    "    time.sleep(5)\n",
+    "# writer.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83d1617e-a1d2-4688-b0bd-a4294d92fdbe",
+   "id": "042b08c9-c5dd-40df-966c-a4a8ac888026",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# # things to add\n",
-    "# - if books come up as zero, add them to error list\n",
-    "# - read old csv\n",
-    "# - add books to sme df and write back"
-   ]
+   "source": []
   }
  ],
  "metadata": {
